# seeed-cooking-robot

./: .gitignore  AGENTS.md  PROJECT_SPEC.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-check.yml
configs/: camera.yaml  detector.yaml  robot.yaml  workspace.yaml
docs/: github_release_checklist.md  milestone_plan.md  pipeline.md  safety.md
grasp_targets/: README.md  graspable_items.yaml
lerobot/: 训练脚本.txt
lerobot/seeed_rebot_b601_dm/do1/data/chunk-000/: file-000.parquet
lerobot/seeed_rebot_b601_dm/do1/meta/: info.json  stats.json
lerobot/seeed_rebot_b601_dm/do1/meta/episodes/chunk-000/: file-000.parquet
lerobot/seeed_rebot_b601_dm/do2/data/chunk-000/: file-000.parquet
lerobot/seeed_rebot_b601_dm/do2/meta/: info.json  stats.json  tasks.parquet
lerobot/seeed_rebot_b601_dm/do2/meta/episodes/chunk-000/: file-000.parquet
lerobot/seeed_rebot_b601_dm/do3/data/chunk-000/: file-000.parquet
lerobot/seeed_rebot_b601_dm/do3/meta/: info.json  stats.json
recipes/: simple_burger.yaml  tomato_egg.yaml
scripts/: run_cooking_demo.py  test_camera.py  test_detection.py  test_handeye.py  test_pick_place.py
src/rebot_cooking_agent/: config.py  types.py
src/rebot_cooking_agent/agent/: planner.py  recipe_executor.py
src/rebot_cooking_agent/grasping/: grasp_planner.py
src/rebot_cooking_agent/perception/: camera.py  detector.py  handeye_transform.py  pose_estimator.py
src/rebot_cooking_agent/robot/: rebot_arm.py  safety.py
src/rebot_cooking_agent/skills/: compound.py  context.py  pick.py  place.py  pour.py  stir.py
(+1 files in other folders)
