[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rebot-cooking-agent"
version = "0.1.0"
description = "Target detection + agent skill routing for reBot Arm cooking demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "rich>=13.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
